--- a/trunk/SabadBan/SabadBan/IndexHeader.xib
+++ b/trunk/SabadBan/SabadBan/IndexHeader.xib
@@ -22,13 +22,13 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="percent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gBh-Vu-QuM">
-                            <rect key="frame" x="8" y="18" width="59" height="21"/>
+                            <rect key="frame" x="12" y="18" width="59" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cunt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mKM-wb-f4y">
-                            <rect key="frame" x="112" y="18" width="37" height="21"/>
+                            <rect key="frame" x="121" y="18" width="37" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -43,17 +43,17 @@
                     <color key="backgroundColor" red="0.16452825085752149" green="0.21934768017884673" blue="0.3188829919472469" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="ayU-uk-z6P" secondAttribute="bottom" id="DkW-On-Zaa"/>
-                        <constraint firstItem="mKM-wb-f4y" firstAttribute="leading" secondItem="gBh-Vu-QuM" secondAttribute="trailing" constant="45" id="EvE-gZ-MIt">
+                        <constraint firstItem="mKM-wb-f4y" firstAttribute="leading" secondItem="gBh-Vu-QuM" secondAttribute="trailing" constant="50" id="EvE-gZ-MIt">
                             <variation key="heightClass=regular-widthClass=regular" constant="118"/>
                         </constraint>
                         <constraint firstItem="ayU-uk-z6P" firstAttribute="trailing" secondItem="oKh-dB-zAj" secondAttribute="trailing" id="KHO-a1-3mK"/>
                         <constraint firstItem="gBh-Vu-QuM" firstAttribute="centerY" secondItem="IiM-tW-7n0" secondAttribute="centerY" constant="-8" id="Wkz-uc-nB3"/>
                         <constraint firstItem="mKM-wb-f4y" firstAttribute="baseline" secondItem="oKh-dB-zAj" secondAttribute="baseline" id="egh-bR-VRz"/>
-                        <constraint firstItem="ayU-uk-z6P" firstAttribute="leading" secondItem="gBh-Vu-QuM" secondAttribute="leading" id="pAJ-DP-rW9"/>
+                        <constraint firstItem="ayU-uk-z6P" firstAttribute="leading" secondItem="gBh-Vu-QuM" secondAttribute="leading" constant="-4" id="pAJ-DP-rW9"/>
                         <constraint firstItem="gBh-Vu-QuM" firstAttribute="baseline" secondItem="mKM-wb-f4y" secondAttribute="baseline" id="r7x-uT-cDG"/>
                         <constraint firstAttribute="trailing" secondItem="oKh-dB-zAj" secondAttribute="trailing" constant="24" id="v2J-nH-uWN"/>
                         <constraint firstItem="ayU-uk-z6P" firstAttribute="top" secondItem="mKM-wb-f4y" secondAttribute="bottom" constant="13" id="xOA-b6-veG"/>
-                        <constraint firstItem="gBh-Vu-QuM" firstAttribute="leading" secondItem="IiM-tW-7n0" secondAttribute="leadingMargin" id="yog-Jx-FqS">
+                        <constraint firstItem="gBh-Vu-QuM" firstAttribute="leading" secondItem="IiM-tW-7n0" secondAttribute="leadingMargin" constant="4" id="yog-Jx-FqS">
                             <variation key="heightClass=regular-widthClass=regular" constant="25"/>
                         </constraint>
                     </constraints>
